[package]
name = "viewer"
version = "0.0.1"
authors = ["habx"]
edition = "2021"
description = "Real-estate project viewer"
readme = "readme.md"

[lib]
path = "./sources/lib.rs"

[dependencies]
gloo-events = "0.1"
gloo-net = { version = "0.2", default-features = false, features = ["http", "json"] }
leptos = { version = "0.0", default-features = false, features = ["csr", "interning"] }
orbit = { git = "https://github.com/alexisfontaine/orbit" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

[dependencies.web-sys]
version = "0.3"
features = [
	"console",
	"KeyboardEvent",
]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"

[[bin]]
name = "default"
path = "./sources/main.rs"
