[package]
name = "viewer"
version = "0.0.1"
authors = ["habx"]
edition = "2021"
description = "Real-estate project viewer"
readme = "readme.md"
build = "./sources/build.rs"

[lib]
path = "./sources/lib.rs"

[dependencies]
gloo-events = "0.1"
gloo-net = { version = "0.2", default-features = false, features = ["http"] }
leptos = { version = "0.1", default-features = false, features = ["csr"] }
orbit = { git = "https://github.com/alexisfontaine/orbit", tag = "v0.13.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
	"console",
	"DomTokenList",
	"KeyboardEvent",
	"Location",
	"UrlSearchParams",
]

[dev-dependencies]
futures = "0.3"
wasm-bindgen-test = "0.3"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"

[[bin]]
name = "default"
path = "./sources/main.rs"
